# rust-wasm

./: .gitignore  Cargo.toml  README.md  index.html  package-lock.json  package.json  webpack.config.js
src/: index.js  lib.rs  test.js  wasm_entry.js  wasm_entry_bg.js  wasm_entry_bg.wasm
src/assets/js/: wasm.js
